--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,74 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# # dependencies
+# /node_modules
+# /.pnp
+# .pnp.*
+# .yarn/*
+# !.yarn/patches
+# !.yarn/plugins
+# !.yarn/releases
+# !.yarn/versions
 
-# testing
-/coverage
+# # testing
+# /coverage
 
-# next.js
-/.next/
-/out/
+# # next.js
+# /.next/
+# /out/
 
-# production
-/build
+# # production
+# /build
 
-# misc
-.DS_Store
-*.pem
+# # misc
+# .DS_Store
+# *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# # debug
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
+# .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# # env files (can opt-in for committing if needed)
+# .env*
 
-# vercel
-.vercel
+# # vercel
+# .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# # typescript
+# *.tsbuildinfo
+# next-env.d.ts
 
-# === Global ignores ===
- node_modules/
+# # === Global ignores ===
+#  node_modules/
+# .env
+
+# # === Ignore .env and node_modules inside subfolders ===
+# server/node_modules/
+# videoapp/node_modules/
+
+# server/.env
+# . videoapp/.env
+
+# Global
+node_modules/
 .env
 
-# === Ignore .env and node_modules inside subfolders ===
-server/node_modules/
+# Frontend
 videoapp/node_modules/
+videoapp/.env
+videoapp/.next/
+videoapp/out/
 
+# Backend
+server/node_modules/
 server/.env
-. videoapp/.env
+server/dist/
 
+# System/IDE files
+.DS_Store
+*.log
+.vscode/
+.idea/
+*.tsbuildinfo
